# kafka-tutorial

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
consumer/: .env  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml
consumer/consumer/: __init__.py  __main__.py  config.py  kafka_consumer.py  logging_helper.py  process.py
consumer/consumer/db/: __init__.py  main_table.py  utils.py
dash-app/: README.md
docs/: INTRO.md  KAFKA-BROKERS.md  PYTHON-KAFKA.md
producer/: .env  Dockerfile  Makefile  README.md  pyproject.toml
producer/producer/: __init__.py  __main__.py  generate.py  kafka_producer.py  logging_helper.py  model.py
