[tool.poetry]
name = "consumer"
version = "0.1.0"
description = "A simple kafka consumer writing to a psql database"
authors = ["Matt McFahn"]

[tool.poetry.dependencies]
python = "^3.9"
aiokafka = "^0.7.2"
ecs-logging = "^2.0.0"
pydantic = "^1.9.1"
python-dotenv = "^0.20.0"
SQLAlchemy = "^1.4.37"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
pylint = "^2.14.2"
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
skip = [".tox",".venv","build","dist"]

[tool.pylint.messages_control]
disable = "C0330, C0326, W1203" # Add anything else needed

[tool.pylint.format]
max-line-length = "120"

[tool.pylint.MASTER]
fail-under=9
ignore-paths=['^test/.*$']
# Any other config for pylint that'd go in a .pylintrc

[tool.coverage.paths]
source = ["consumer"]

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 85

[tool.pytest.ini_options]
asyncio_mode="auto"
